--- a/weather/templates/weather/weather.html
+++ b/weather/templates/weather/weather.html
@@ -22,7 +22,7 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    What's the weather like?
+                    How's the weather today?
                 </h1>
             </div>
         </div>
